clusters/cluster0/kubernetes/apps/media/prowlarr/app/prowlarr-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  hostnames:
  - prowlarr.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: prowlarr-service
      port: 9696
    matches:
    - path:
        type: PathPrefix
        value: /
